# telomere

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix
src/: downloader.rs  main.rs
telomere-cli/: Cargo.toml
telomere-cli/src/: main.rs
telomere-core/: Cargo.toml
telomere-core/src/: downloader.rs
