[package]
name = "telomere"
version = "0.1.0"
edition = "2024"

[dependencies]
grammers-client = "0.9.0"
grammers-mtsender = "0.9.0"
grammers-session = "0.9.0"
grammers-tl-types = "0.9.0"
log = "0.4.29"
mime_guess = "2.0.5"
simple_logger = "5.2.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
